--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
               </p>
             </div>
             <form action="" class="form__form">
-              <fieldset class="form__fieldset" style="display: none">
+              <fieldset class="form__fieldset js-form-1">
                 <div class="form__field">
                   <label class="form__label" for="name">Ваше имя</label>
                   <input
@@ -124,9 +124,9 @@
                   <label class="form__label" for="promo">Промокод</label>
                   <input class="form__input inp" type="text" id="promo" placeholder="HGF864" />
                 </div>
-                <button class="form__btn btn" type="button">Далее</button>
+                <button class="form__btn btn js-form-next" type="button">Далее</button>
               </fieldset>
-              <fieldset class="form__fieldset">
+              <fieldset class="form__fieldset js-form-2" style="display: none">
                 <div class="form__field">
                   <label class="form__label" for="password">Пароль</label>
                   <input
@@ -158,7 +158,7 @@
                   />
                 </div>
                 <div class="form__buttons">
-                  <button class="form__btn btn btn_gray" type="button">Назад</button>
+                  <button class="form__btn btn btn_gray js-form-back" type="button">Назад</button>
                   <button class="form__btn btn" type="submit">Подтвердить</button>
                 </div>
                 <label class="form__personal">
@@ -214,8 +214,8 @@
             <h3 class="footer__title">Свяжитесь с нами</h3>
             <div class="footer__contacts-wrapper">
               <a class="footer__phone" href="tel:+3 67 8754 7894">+3 67 8754 7894</a>
-              <a class="footer__email" href="mailto:mflowers@flo.com">mflowers@flo.com</a>
-              <button class="footer__btn btn" type="button">
+              <a class="footer__email">mflowers@flo.com</a>
+              <a class="footer__btn btn" href="mailto:mflowers@flo.com">
                 Написать
                 <svg
                   width="20"
@@ -233,7 +233,7 @@
                     fill="black"
                   />
                 </svg>
-              </button>
+              </a>
             </div>
           </div>
         </div>
